# Practica1_F1Team

./: CMakeLists.txt  F1Team.cpp  F1Team.h  FrontJack.cpp  FrontJack.h  FrontJackA.cpp  FrontJackA.h  FrontJackB.cpp  FrontJackB.h  FrontWingFlapAdjust.cpp  FrontWingFlapAdjust.h  LollipopMan.cpp  LollipopMan.h  PitCrewTeam.cpp  PitCrewTeam.h  README.md  RearJack.cpp  RearJack.h  SideJack.cpp  SideJack.h  TeamDriverA.cpp  TeamDriverA.h  TeamDriverB.cpp  TeamDriverB.h  TyreGunner.cpp  TyreGunner.h  TyreOff.cpp  TyreOff.h  TyreOn.cpp  TyreOn.h  main.cpp
