cmake_minimum_required(VERSION 3.27)
project(CLionProjects)

set(CMAKE_CXX_STANDARD 23)

add_executable(CLionProjects main.cpp
        F1Team.cpp
        F1Team.h
        PitCrewTeam.cpp
        PitCrewTeam.h
        TeamDriverA.cpp
        TeamDriverA.h
        TeamDriverB.cpp
        TeamDriverB.h
        TyreGunner.cpp
        TyreGunner.h
        TyreOff.cpp
        TyreOff.h
        TyreOn.cpp
        TyreOn.h
        FrontJack.cpp
        FrontJack.h
        RearJack.cpp
        RearJack.h
        SideJack.cpp
        SideJack.h
        FrontWingFlapAdjust.cpp
        FrontWingFlapAdjust.h
        LollipopMan.cpp
        LollipopMan.h
        FrontJackA.cpp
        FrontJackA.h
        FrontJackB.cpp
        FrontJackB.h
)
